fixed contrast issues

--- a/styles/place.css
+++ b/styles/place.css
@@ -9,7 +9,7 @@
 body {
   font-family: 'Quicksand', sans-serif;
   background: var(--light-gray);
-  background-color: #0a9396;
+  background-color: #dbf4f5;
   color: var(--dark-gray);
 }
 
